blog-service/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blog-service
  labels:
    name: blog-service
    app: blog-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: blog-service
        app: blog-service
    spec:
      containers:
        - name: blog-service
          image: gcr.io/isling/blog-service
          ports:
            - containerPort: 4000
