blog-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  labels:
    app: blog-service
spec:
  ports:
    - name: blog-service-port
      port: 80
      protocol: TCP
      targetPort: 4000
  selector:
    name: blog-service
    app: blog-service
  type: NodePort
